ingress Controller/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ingress-class
spec:
  controller: example.com/traefik-ingress-controller
  parameters:
    apiGroup: k8s.example.com
    kind: IngressParameters
    name: ingress-class
