ingress Controller/nginx-deployment-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  nginx-official-service
spec:
  selector:
    app: nginx-official
  type:  NodePort
  ports:
  - protocol: TCP
    port: 80
    nodePort: 31303
