ingress Controller/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rules
  labels:
    name: nginx-ingress
spec:
  ingressClassName: http-ingress
  rules:
  - host: nginx-official.example.com
    http:
      paths:
      - pathType: Exact
        path: /
        backend:
          service:
            name: nginx-official-service
            port: 
              number: 80
  - host: magical-nginx.example.com
    http:
      paths:
      - pathType: Exact
        path: /
        backend:
          service:
            name: magical-nginx
            port: 
              number: 80
